<resources>
    <string name="app_name">健康系统</string>
    <string name="progressbar_dialog_txt">请稍后...</string>
    <string name="login">登录</string>
    <string name="passwd">请输入密码</string>
    <string name="remeber">记住密码</string>
    <string name="user_name">请输入用户名</string>
    <string name="regester">没有账户？注册</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="main">登录</string>
</resources>
