<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/circle"
                android:elevation="4dp">

                <TextView
                    android:id="@+id/headerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="登录"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="160dp"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/selector_login_input"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/login_id_img"
                        android:layout_width="46dp"
                        android:layout_height="18dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"/>
                        <!--android:src="@mipmap/log_phone" android:contentDescription="@string/todo3" />-->

                    <TextView
                        android:id="@+id/login_id_space"
                        android:layout_width="1dp"
                        android:layout_height="18dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toEndOf="@id/login_id_img"
                        android:background="#99DDDDDD" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:id="@+id/editText_login_username"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@id/login_id_space"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:background="#00FFFFFF"
                        android:paddingStart="10dp"
                        android:paddingEnd="8dp"
                        android:singleLine="true"
                        android:textColor="#FFF"
                        android:textColorHint="#99DDDDDD"
                        android:textSize="14sp"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f1eded" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/login_pwd_img"
                        android:layout_width="46dp"
                        android:layout_height="18dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"/>
                        <!--android:src="@mipmap/login_pwd" android:contentDescription="@string/todo1"/>-->

                    <TextView
                        android:id="@+id/login_pwd_space"
                        android:layout_width="1dp"
                        android:layout_height="18dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toEndOf="@id/login_pwd_img"
                        android:background="#99DDDDDD" />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:id="@+id/editText_login_userpwd"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@id/login_pwd_space"
                        android:hint="@string/passwd"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:background="#00FFFFFF"
                        android:padding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="8dp"
                        android:singleLine="true"
                        android:textColor="#FFF"
                        android:textColorHint="#99DDDDDD"
                        android:textSize="14sp"
                        />


                    <ImageView
                        android:id="@+id/login_eye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="3dp"
                        android:layout_toEndOf="@id/editText_login_userpwd"/>
                        <!--android:background="@mipmap/eye_normal" android:contentDescription="@string/todo2" />-->
                </RelativeLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="168dp"
                android:layout_height="46dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/button_border"
                android:text="@string/login"
                android:textColor="#3e9eab"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/login_register"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="240dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/regester"
                    android:textColor="@color/red"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>